# homie

./: .gitignore  .gitmodules  .npmrc  AGENTS.md  Cargo.toml  LEARNINGS.md  README.md  config.toml.example  homie.db  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.json
.beads/: issues.jsonl
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: homie-core-lint.yml
crates/homie-core/: Cargo.toml
crates/homie-core/src/: auth.rs  authz.rs  config.rs  connection.rs  lib.rs  server.rs
crates/homie-core/src/agent/: mod.rs  process.rs  service.rs
crates/homie-core/src/jobs/: mod.rs
crates/homie-core/src/notifications/: mod.rs  service.rs
crates/homie-core/src/pairing/: service.rs
crates/homie-core/src/presence/: registry.rs
crates/homie-core/src/router/: dispatch.rs  handler.rs  mod.rs  registry.rs
crates/homie-core/src/storage/: mod.rs  sqlite.rs  types.rs
crates/homie-core/src/terminal/: mod.rs  registry.rs  runtime.rs  service.rs
crates/homie-core/tests/: router.rs  terminal.rs  ws_server.rs
crates/homie-gateway/: Cargo.toml
crates/homie-gateway/src/: main.rs
crates/homie-protocol/: Cargo.toml
crates/homie-protocol/src/: envelope.rs  error.rs  frame.rs  lib.rs  version.rs
docs/: config.md  provider-auth-smoke-matrix.md  provider-auth.md  quick-start.md
docs/decisions/: terminal-renderer.md
docs/design/: chat-auth-redirect-banner.md  provider-accounts-section.md  settings-provider-login.md  shared-auth-architecture.md  tool-detail-card-system.md
docs/learned/: agent-browser-2026-02-13.md  browser-control-endpoint.md  chrono-dep-2026-02-03.md  coderabbit-auth-secrets-2026-02-17.md  codex-app-server.md  deps-review-2026-02-01.md  deps-review-2026-02-03.md  mobile-markdown-rendering.md  model-catalog-codex-copilot-2026-02-11.md  openclaw-browser.md  parallel-toolcall-semantics-2026-02-12.md  roci-auth-agent-loop.md  roci-deps-2026-02-03.md  vibetunnel-terminal-snapshots.md  web-tools.md
plans/phase1/: backend.json  backend.prd  embedded-loop.prd  embedded-loop.tech.md  plan.md  rn-mobile.prd  web.json  web.prd
plans/phase2/: design-engineering-spec.md  motion-system.md  rn-expo-chat-first.md  rn-mobile-ux.md  roci.md  ux-redesign.md
scripts/: dev.sh  install-git-hooks.sh  install.sh
src/apps/mobile/: README.md  app.json  metro.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
src/apps/mobile/__tests__/: gateway-chat.test.ts  gateway-reconnect.test.ts  setup.ts
src/apps/mobile/app/: +html.tsx  +not-found.tsx  _layout.tsx
src/apps/mobile/config/: runtime.ts
src/apps/mobile/hooks/: gateway-chat-utils.ts  useAppTheme.ts  useGatewayChat.ts  useGatewayTarget.ts  useReducedMotion.ts  useStreamingDebounce.ts
src/apps/mobile/lib/: gateway-client.ts
src/apps/mobile/scripts/: expo-start.mjs
src/apps/mobile/theme/: motion.ts  tokens.ts
src/apps/shared/: README.md  package.json  tsconfig.json
src/apps/shared/src/: chat-client.test.ts  chat-client.ts  chat-events.ts  chat-turns.ts  chat-types.ts  chat-utils.ts  gateway-transport.ts  index.ts  model-providers.ts  protocol.ts  provider-auth-copy.ts  request-map.ts  settings-types.ts  terminal-sessions.ts
src/core/: Cargo.toml  system_prompt.md
src/core/src/: authz.rs  config.rs  connection.rs  debug_bytes.rs  execpolicy.rs  homie_config.rs  lib.rs  outbound.rs  paths.rs  server.rs
src/core/src/agent/: mod.rs  process.rs  roci_backend.rs  service.rs
src/core/src/agent/roci_backend/: events.rs  mod.rs  persistence.rs  run.rs  state.rs
src/core/src/agent/service/: account_rpc.rs  approvals.rs  catalog_rpc.rs  chat_rpc.rs  core.rs  dispatch.rs  events.rs  files.rs  helpers.rs  models.rs  params.rs  tests.rs
src/core/src/agent/tools/: apply_patch.rs  args.rs  browser.rs  cron.rs  exec.rs  fs.rs  mod.rs  openclaw_browser.rs  process.rs  process_registry.rs  registry.rs  web.rs
src/core/src/cron/: mod.rs  models.rs  scheduler.rs  service.rs
src/core/src/jobs/: service.rs
src/core/src/pairing/: mod.rs
src/core/src/presence/: mod.rs  service.rs
src/core/src/router/: handler.rs  registry.rs  subscriptions.rs
src/core/src/storage/: mod.rs  sqlite.rs  types.rs
src/core/src/terminal/: mod.rs  registry.rs  service.rs
src/core/tests/: live_github_copilot.rs  live_openai_codex.rs  live_tools.rs  router.rs  terminal.rs  ws_server.rs
src/gateway/: Cargo.toml
src/gateway/src/: main.rs
src/infra/homie-protocol/src/: handshake.rs
src/web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/web/src/: App.css  App.tsx  index.css  main.tsx
src/web/src/components/: AuthRedirectBanner.tsx  chat-composer-bar.tsx  chat-composer-input.tsx  chat-inline-menu.tsx  chat-item.tsx  chat-markdown.tsx  chat-panel.tsx  chat-thread-header.tsx  chat-thread-list.tsx  chat-turns.tsx  gateway-details-modal.tsx  gateway-header.tsx  session-list.tsx  (+6 more)
(+78 files in other folders)
