[workspace]
resolver = "2"
members = [
  "src/core",
  "src/gateway",
  "src/infra/homie-protocol",
]
exclude = [
  "src/infra/roci",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
portable-pty = "0.9"
rusqlite = { version = "0.38", features = ["bundled"] }
directories = "6"
toml = "0.9"
shell-words = "1.1.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
readabilityrs = "0.1.2"
htmd = "0.5.0"
html2text = "0.16.7"
pulldown-cmark = "0.13.0"
homie-protocol = { path = "src/infra/homie-protocol" }
