[package]
name = "homie-core"
description = "Core server runtime for the Homie remote terminal system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
homie-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
futures.workspace = true
portable-pty.workspace = true
rusqlite.workspace = true
directories.workspace = true
toml.workspace = true
shell-words.workspace = true
reqwest.workspace = true
url.workspace = true
readabilityrs.workspace = true
htmd.workspace = true
html2text.workspace = true
pulldown-cmark.workspace = true
roci = { path = "../infra/roci", default-features = false, features = ["openai", "openai-compatible", "anthropic", "agent"] }

[dev-dependencies]
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
axum = { workspace = true, features = ["ws"] }
tokio-tungstenite = "0.26"
futures.workspace = true
